# GIT-diff

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  pyproject.toml
.github/workflows/: claude.yml
diffquiz/: __init__.py  ai.py  cli.py  git_utils.py
diffquiz/graph/: __init__.py  build.py  enrich.py  model.py  retrieve.py  store.py  update.py
diffquiz/graph/extract/: __init__.py  base.py  python.py
diffquiz/providers/: __init__.py  anthropic_api.py  base.py  claude_cli.py  codex_cli.py  gemini_cli.py  opencode_cli.py
docs/: frontend-setup-brief.md  setup-prompts.md
tests/: test_ai.py  test_cli.py  test_enrich.py  test_extract_python.py  test_model.py  test_providers.py  test_retrieve.py  test_store.py  test_update.py
tests/fixtures/: sample.py
