[project]
name = "diffquiz"
version = "0.1.0"
description = "Predict the diff before you read what your AI just wrote."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Bravim Purohit" }]
keywords = ["ai", "llm", "cli", "git", "diff", "code-review", "learning", "tui"]
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
ai = ["anthropic>=0.40"]
dev = ["pytest>=8"]

[project.scripts]
diffquiz = "diffquiz.cli:main"

[project.urls]
Homepage = "https://github.com/Bravim-Ketan-Purohit/GIT-diff"
Issues = "https://github.com/Bravim-Ketan-Purohit/GIT-diff/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["diffquiz"]

[tool.pytest.ini_options]
testpaths = ["tests"]
